--- a/WoofRunner/Storyboards/Menu.storyboard
+++ b/WoofRunner/Storyboards/Menu.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Menu View Controller-->
         <scene sceneID="QE6-92-VGJ">
             <objects>
-                <viewController id="bM1-wq-hg5" sceneMemberID="viewController">
+                <viewController id="bM1-wq-hg5" customClass="MenuViewController" customModule="WoofRunner" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="KmX-fy-WkO"/>
                         <viewControllerLayoutGuide type="bottom" id="jjC-J2-fu1"/>
@@ -24,25 +25,10 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="menu-background" translatesAutoresizingMaskIntoConstraints="NO" id="9v6-Z5-pT5">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.84473580239143464" green="0.94523318527918776" blue="0.80820128154025395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WOOF RUNNER" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SMm-BA-atA">
-                                <rect key="frame" x="116" y="28" width="536" height="204"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="204" id="DBg-UB-lt2"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="70"/>
-                                <color key="textColor" red="0.83600068720312126" green="1" blue="0.89592379635715846" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test-level-image" translatesAutoresizingMaskIntoConstraints="NO" id="Z04-lj-eqj">
-                                <rect key="frame" x="178" y="240" width="412" height="495"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="495" id="9dx-FK-bMy"/>
-                                    <constraint firstAttribute="width" constant="412" id="mKA-Yi-Hmv"/>
-                                </constraints>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9d-GK-BQI">
-                                <rect key="frame" x="243" y="900" width="282" height="95"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9d-GK-BQI" userLabel="customBtn">
+                                <rect key="frame" x="243" y="718" width="282" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="282" id="amb-DQ-whB"/>
                                     <constraint firstAttribute="height" constant="95" id="dSq-yd-TYl"/>
@@ -52,8 +38,15 @@
                                     <segue destination="KWp-NW-dJb" kind="show" id="ReE-sQ-ToZ"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test-logo" translatesAutoresizingMaskIntoConstraints="NO" id="VBf-YC-aN2">
+                                <rect key="frame" x="64" y="63" width="640" height="512"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="640" id="UVo-t5-P3l"/>
+                                    <constraint firstAttribute="width" secondItem="VBf-YC-aN2" secondAttribute="height" multiplier="5:4" id="eBi-NO-uZW"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d2d-nQ-NcI" userLabel="playBtn">
-                                <rect key="frame" x="216" y="776" width="336" height="95"/>
+                                <rect key="frame" x="216" y="583" width="336" height="95"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="336" id="EO1-Ll-sCM"/>
                                     <constraint firstAttribute="height" constant="95" id="awv-5b-ccv"/>
@@ -64,18 +57,21 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.93523098487854883" green="1" blue="0.81973818164805135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Z04-lj-eqj" firstAttribute="centerY" secondItem="ktK-jY-r7L" secondAttribute="centerY" constant="-24.5" id="0fh-3q-5MH"/>
-                            <constraint firstItem="SMm-BA-atA" firstAttribute="top" secondItem="KmX-fy-WkO" secondAttribute="bottom" constant="8" id="3Zw-0X-oze"/>
-                            <constraint firstItem="jjC-J2-fu1" firstAttribute="top" secondItem="j9d-GK-BQI" secondAttribute="bottom" constant="29" id="3x2-0j-k5T"/>
-                            <constraint firstItem="d2d-nQ-NcI" firstAttribute="top" secondItem="Z04-lj-eqj" secondAttribute="bottom" constant="41" id="6dZ-bG-TlM"/>
+                            <constraint firstItem="jjC-J2-fu1" firstAttribute="top" secondItem="j9d-GK-BQI" secondAttribute="bottom" constant="211" id="3x2-0j-k5T"/>
                             <constraint firstItem="j9d-GK-BQI" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="Eev-1V-nEr"/>
-                            <constraint firstItem="SMm-BA-atA" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="div-Wg-lxe"/>
+                            <constraint firstItem="d2d-nQ-NcI" firstAttribute="top" secondItem="VBf-YC-aN2" secondAttribute="bottom" constant="8" id="Kbh-mS-4UQ"/>
+                            <constraint firstItem="VBf-YC-aN2" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="QRC-kh-snw"/>
+                            <constraint firstItem="VBf-YC-aN2" firstAttribute="top" secondItem="KmX-fy-WkO" secondAttribute="bottom" constant="43" id="k9w-Cm-8nN"/>
                             <constraint firstItem="d2d-nQ-NcI" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="pz0-BY-CsJ"/>
-                            <constraint firstItem="Z04-lj-eqj" firstAttribute="centerX" secondItem="ktK-jY-r7L" secondAttribute="centerX" id="xHy-SY-9wo"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="customBtn" destination="j9d-GK-BQI" id="oO5-he-GBH"/>
+                        <outlet property="playBtn" destination="d2d-nQ-NcI" id="Sgg-NL-C6l"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OEh-KI-pKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -102,6 +98,6 @@
         <image name="custom-btn" width="282" height="95"/>
         <image name="menu-background" width="384" height="512"/>
         <image name="play-btn" width="282" height="95"/>
-        <image name="test-level-image" width="768" height="1024"/>
+        <image name="test-logo" width="300" height="250"/>
     </resources>
 </document>
